// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopMenu /> Should render menu 1`] = `
<Menu
  inverted={true}
>
  <withProps(NavLink)
    exact={true}
    to="/"
  >
    Home
  </withProps(NavLink)>
  <withProps(NavLink)
    to="/features"
  >
    Features
  </withProps(NavLink)>
  <MenuItem>
    Card base
  </MenuItem>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    icon="dropdown"
    item={true}
    minCharacters={1}
    noResultsMessage="No results found."
    openOnFocus={true}
    renderLabel={[Function]}
    selectOnBlur={true}
    text="Helpers"
  >
    <DropdownMenu>
      <DropdownItem>
        Matrix Simple
      </DropdownItem>
      <DropdownItem>
        Matrix Continuous
      </DropdownItem>
      <DropdownItem>
        Numbers
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <MenuMenu
    position="right"
  >
    <Modal
      closeIcon={true}
      closeOnDimmerClick={true}
      closeOnDocumentClick={false}
      dimmer={true}
      size="small"
      trigger={Object {}}
    >
      <ModalHeader>
        Log in
      </ModalHeader>
      <ModalContent>
        <Connect(Component) />
      </ModalContent>
    </Modal>
  </MenuMenu>
</Menu>
`;

exports[`<TopMenu /> Should render menu for logged user 1`] = `
<Menu
  inverted={true}
>
  <withProps(NavLink)
    exact={true}
    to="/"
  >
    Home
  </withProps(NavLink)>
  <withProps(NavLink)
    to="/features"
  >
    Features
  </withProps(NavLink)>
  <MenuItem>
    Card base
  </MenuItem>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    icon="dropdown"
    item={true}
    minCharacters={1}
    noResultsMessage="No results found."
    openOnFocus={true}
    renderLabel={[Function]}
    selectOnBlur={true}
    text="Helpers"
  >
    <DropdownMenu>
      <DropdownItem>
        Matrix Simple
      </DropdownItem>
      <DropdownItem>
        Matrix Continuous
      </DropdownItem>
      <DropdownItem>
        Numbers
      </DropdownItem>
    </DropdownMenu>
  </Dropdown>
  <MenuMenu
    position="right"
  >
    <withProps(NavLink)
      to="/user"
    >
      Dashboard
    </withProps(NavLink)>
    <Dropdown
      additionLabel="Add "
      additionPosition="top"
      closeOnBlur={true}
      icon="dropdown"
      item={true}
      minCharacters={1}
      noResultsMessage="No results found."
      openOnFocus={true}
      renderLabel={[Function]}
      selectOnBlur={true}
      trigger={Object {}}
    >
      <DropdownMenu>
        <DropdownItem>
          Change password
        </DropdownItem>
        <withProps(NavLink)
          to="/logout"
        >
          Log out
        </withProps(NavLink)>
      </DropdownMenu>
    </Dropdown>
  </MenuMenu>
</Menu>
`;
